[package]
name = "curta-18-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "curta-18-solver"
path = "bin/main.rs"

[dependencies]
futures-util = "0.3.28"
mev-share = "0.1.4"
mev-share-sse = "0.1.4"
mev-share-rpc-api = { version = "0.1.4", features = ["client", "server"] }
tracing = "0.1.37"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
hex-literal = "0.4.1"
ethers-core = { version = "2.0", default-features = false }
ethers-signers = "2.0"
ethers-providers = { version = "2.0", features = ["ws"] }
ethers-middleware = "2.0"
ethers-contract = "2.0"
tower = "0.4.13"
jsonrpsee = { version = "0.18", features = ["client", "async-client"] }
dotenv = "0.15.0"
eyre = "0.6.8"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
clap = { version = "4.4.5", features = ["derive"] }
